@@ -1,0 +1,4 @@
+# frozen_string_literal: true
+
+require 'cucumber/rspec/doubles'
+require 'elastic-apm'
